--- a/CSPBot2.0/CSPBot2.0.vcxproj
+++ b/CSPBot2.0/CSPBot2.0.vcxproj
@@ -55,7 +55,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
-    <IncludePath>$(SolutionDir)Include;$(SolutionDir)Include\openssl;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Include;$(SolutionDir)Include\openssl;$(SolutionDir)CSPBot2.0\HeadFile;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <IncludePath>$(SolutionDir)Include;$(IncludePath)</IncludePath>
@@ -126,28 +126,42 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Include\mysysinfo\mysysinfo.cpp" />
-    <ClCompile Include="Command.cpp" />
-    <ClCompile Include="logger.cpp" />
-    <ClCompile Include="server.cpp" />
-    <ClCompile Include="websocketClient.cpp" />
-    <QtMoc Include="..\Include\mysysinfo\mysysinfo.h" />
-    <QtMoc Include="logger.h" />
-    <QtMoc Include="server.h" />
-    <QtMoc Include="websocketClient.h" />
-    <QtRcc Include="cspbot20.qrc" />
-    <QtUic Include="cspbot20.ui" />
-    <QtMoc Include="cspbot20.h" />
-    <ClCompile Include="cspbot20.cpp" />
-    <ClCompile Include="main.cpp" />
-    <None Include="CSPBot2.0.ico" />
-    <ResourceCompile Include="CSPBot2.0.rc" />
-    <ClInclude Include="global.h" />
-    <ClInclude Include="helper.h" />
-    <ClInclude Include="stdafx.h" />
-    <ClCompile Include="stdafx.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">Create</PrecompiledHeader>
+    <ClCompile Include="SourceFile\Command.cpp" />
+    <ClCompile Include="SourceFile\cspbot20.cpp" />
+    <ClCompile Include="SourceFile\logger.cpp" />
+    <ClCompile Include="SourceFile\main.cpp" />
+    <ClCompile Include="SourceFile\regularEdit.cpp" />
+    <ClCompile Include="SourceFile\server.cpp" />
+    <ClCompile Include="SourceFile\stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="SourceFile\websocketClient.cpp" />
+    <QtMoc Include="..\Include\mysysinfo\mysysinfo.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="HeadFile\global.h" />
+    <ClInclude Include="HeadFile\helper.h" />
+    <QtMoc Include="HeadFile\regularEdit.h" />
+    <QtMoc Include="HeadFile\websocketClient.h" />
+    <QtMoc Include="HeadFile\server.h" />
+    <QtMoc Include="HeadFile\logger.h" />
+    <QtMoc Include="HeadFile\cspbot20.h" />
+    <ClInclude Include="HeadFile\stdafx.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="ResourceFile\CSPBot.ico" />
+    <Image Include="ResourceFile\CSPBot2.0.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ResourceFile\CSPBot2.0.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtRcc Include="ResourceFile\cspbot20.qrc" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="ResourceFile\cspbot20.ui" />
+    <QtUic Include="ResourceFile\regularEdit.ui" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
