--- a/data/player.yml
+++ b/data/player.yml
@@ -4,3 +4,9 @@
 - playerName: Huo Hua
   qq: 2351078777
   xuid: ""
+- playerName: Huo Hua2
+  qq: 23510787775
+  xuid: ""
+- playerName: Huo Hua3
+  qq: 23510787774
+  xuid: ""
