--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,13 @@ bld/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
+# config and data
+config/*.yml
+data/*.yml
+data/.vscode/
+config/.vscode/
+
+
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
