优化子进程，重新修复Bds1.19.2以上乱码问题

--- a/CSPBot2.0/CSPBot2.0.vcxproj
+++ b/CSPBot2.0/CSPBot2.0.vcxproj
@@ -118,7 +118,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>false</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
     <QtMoc>
       <PrependInclude>stdafx.h;%(PrependInclude)</PrependInclude>
@@ -128,6 +128,7 @@
     <ClCompile Include="..\Include\mysysinfo\mysysinfo.cpp" />
     <ClCompile Include="SourceFile\Command.cpp" />
     <ClCompile Include="SourceFile\cspbot20.cpp" />
+    <ClCompile Include="SourceFile\debug.cpp" />
     <ClCompile Include="SourceFile\logger.cpp" />
     <ClCompile Include="SourceFile\main.cpp" />
     <ClCompile Include="SourceFile\PyAPI.cpp" />
