--- a/CSPBot2.0/CSPBot2.0.vcxproj.filters
+++ b/CSPBot2.0/CSPBot2.0.vcxproj.filters
@@ -130,6 +130,99 @@
     <ClCompile Include="lua\lzio.c">
       <Filter>Source File\Lua</Filter>
     </ClCompile>
+    <ClCompile Include="Yaml\binary.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\convert.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\depthguard.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\directives.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\emit.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\emitfromevents.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\emitter.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\emitterstate.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\emitterutils.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\exceptions.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\exp.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\contrib\graphbuilder.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\contrib\graphbuilderadapter.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\memory.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\node.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\node_data.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\nodebuilder.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\nodeevents.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\null.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\ostream_wrapper.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\parse.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\parser.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\scanner.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\regex_yaml.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\scanscalar.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\scantoken.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\scantag.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\simplekey.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\singledocparser.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\stream.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
+    <ClCompile Include="Yaml\tag.cpp">
+      <Filter>Source File\Yaml</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Source File">
@@ -179,6 +272,12 @@
     </Filter>
     <Filter Include="Header File\System">
       <UniqueIdentifier>{47532a39-bda9-48cf-8b43-e4532b4fbbd3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header File\Yaml">
+      <UniqueIdentifier>{edd4c3cd-a2cd-4cef-8620-1d8057766856}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source File\Yaml">
+      <UniqueIdentifier>{867509ca-aa0c-4338-aa28-6f98b53a538c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -312,6 +411,72 @@
     </ClInclude>
     <ClInclude Include="HeaderFile\lua_api.h">
       <Filter>Header File\Plugins</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\collectionstack.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\directives.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\emitterstate.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\exp.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\emitterutils.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\contrib\graphbuilderadapter.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\indentation.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\nodebuilder.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\nodeevents.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\ptr_vector.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\regex_yaml.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\regeximpl.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\scanner.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\scanscalar.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\setting.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\scantag.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\singledocparser.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\stream.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\stringsource.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\streamcharsource.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\tag.h">
+      <Filter>Header File\Yaml</Filter>
+    </ClInclude>
+    <ClInclude Include="Yaml\token.h">
+      <Filter>Header File\Yaml</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
