--- a/CSPBot2.0/CSPBot2.0.vcxproj
+++ b/CSPBot2.0/CSPBot2.0.vcxproj
@@ -164,7 +164,7 @@
     <ClCompile Include="lua\lvm.c" />
     <ClCompile Include="lua\lzio.c" />
     <ClCompile Include="SourceFile\dialog.cpp" />
-	<ClCompile Include="SourceFile\error.cpp" />
+    <ClCompile Include="SourceFile\messageBox.cpp" />
     <ClCompile Include="SourceFile\plugins.cpp" />
     <ClCompile Include="SourceFile\Command.cpp" />
     <ClCompile Include="SourceFile\cspbot20.cpp" />
@@ -208,10 +208,12 @@
     <QtMoc Include="..\Include\mysysinfo\mysysinfo.h" />
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="HeaderFile\dialog.h" />
     <ClInclude Include="HeaderFile\Event.h" />
     <ClInclude Include="HeaderFile\framework.h" />
     <ClInclude Include="HeaderFile\global.h" />
     <ClInclude Include="HeaderFile\helper.h" />
+    <ClInclude Include="HeaderFile\messageBox.h" />
     <ClInclude Include="HeaderFile\stdafx.h" />
     <ClInclude Include="HeaderFile\yaml2json.hpp" />
     <ClInclude Include="HeaderFile\version.h" />
