match Google C++ Style

--- a/CSPBot2.0/CSPBot2.0.vcxproj
+++ b/CSPBot2.0/CSPBot2.0.vcxproj
@@ -164,16 +164,16 @@
     <ClCompile Include="lua\lvm.c" />
     <ClCompile Include="lua\lzio.c" />
     <ClCompile Include="SourceFile\dialog.cpp" />
-    <ClCompile Include="SourceFile\messageBox.cpp" />
+    <ClCompile Include="SourceFile\message_box.cpp" />
     <ClCompile Include="SourceFile\plugins.cpp" />
-    <ClCompile Include="SourceFile\Command.cpp" />
+    <ClCompile Include="SourceFile\command.cpp" />
     <ClCompile Include="SourceFile\cspbot20.cpp" />
     <ClCompile Include="SourceFile\debug.cpp" />
     <ClCompile Include="SourceFile\logger.cpp" />
     <ClCompile Include="SourceFile\main.cpp" />
-    <ClCompile Include="SourceFile\regularEdit.cpp" />
+    <ClCompile Include="SourceFile\regular_edit.cpp" />
     <ClCompile Include="SourceFile\server.cpp" />
-    <ClCompile Include="SourceFile\websocketClient.cpp" />
+    <ClCompile Include="SourceFile\ws_client.cpp" />
     <ClCompile Include="Yaml\binary.cpp" />
     <ClCompile Include="Yaml\contrib\graphbuilder.cpp" />
     <ClCompile Include="Yaml\contrib\graphbuilderadapter.cpp" />
@@ -213,7 +213,7 @@
     <ClInclude Include="HeaderFile\framework.h" />
     <ClInclude Include="HeaderFile\global.h" />
     <ClInclude Include="HeaderFile\helper.h" />
-    <ClInclude Include="HeaderFile\messageBox.h" />
+    <ClInclude Include="HeaderFile\message_box.h" />
     <ClInclude Include="HeaderFile\stdafx.h" />
     <ClInclude Include="HeaderFile\yaml2json.hpp" />
     <ClInclude Include="HeaderFile\version.h" />
@@ -268,8 +268,8 @@
     <ClInclude Include="Yaml\stringsource.h" />
     <ClInclude Include="Yaml\tag.h" />
     <ClInclude Include="Yaml\token.h" />
-    <QtMoc Include="HeaderFile\regularEdit.h" />
-    <QtMoc Include="HeaderFile\websocketClient.h" />
+    <QtMoc Include="HeaderFile\regular_edit.h" />
+    <QtMoc Include="HeaderFile\ws_client.h" />
     <QtMoc Include="HeaderFile\server.h" />
     <QtMoc Include="HeaderFile\logger.h" />
     <QtMoc Include="HeaderFile\cspbot20.h" />
